編集機能の追加

--- a/index.html
+++ b/index.html
@@ -1,45 +1,128 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Todo</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <div class="background-globes">
         <div class="globe globe-1"></div>
         <div class="globe globe-2"></div>
+        <div class="globe globe-3"></div>
     </div>
 
-    <div class="container">
-        <header>
-            <h1>My Tasks</h1>
-            <p id="date-display"></p>
+    <div class="main-layout">
+        <header class="app-header">
+            <div class="header-left">
+                <h1>My Tasks</h1>
+                <p id="date-display"></p>
+            </div>
+            <nav class="main-nav">
+                <button class="nav-btn active" data-tab="active">
+                    <i class="fas fa-list-check"></i> Active
+                </button>
+                <button class="nav-btn" data-tab="templates">
+                    <i class="fas fa-copy"></i> Templates
+                </button>
+                <button class="nav-btn" data-tab="archive">
+                    <i class="fas fa-box-archive"></i> Archive
+                </button>
+            </nav>
         </header>
 
-        <div class="input-group">
-            <input type="text" id="todo-input" placeholder="新しいタスクを入力..." autocomplete="off">
-            <button id="add-btn"><i class="fas fa-plus"></i></button>
-        </div>
+        <main class="content-area">
+            <!-- Active Todos Section -->
+            <section id="tab-active" class="tab-content active">
+                <div class="section-header">
+                    <h2>進行中のタスク</h2>
+                    <button id="btn-quick-add" class="action-btn primary">
+                        <i class="fas fa-plus"></i> クイック追加
+                    </button>
+                </div>
+                <div id="active-groups-container" class="groups-grid">
+                    <!-- Groups will be inserted here -->
+                </div>
+                <!-- Empty State for Active -->
+                <div id="empty-state-active" class="empty-state" style="display: none;">
+                    <i class="fas fa-clipboard-check"></i>
+                    <p>進行中のタスクはありません</p>
+                    <button class="text-btn" data-switch-tab="templates">テンプレートから開始する</button>
+                </div>
+            </section>
 
-        <div class="todo-list-container">
-            <ul id="todo-list">
-                <!-- Tasks will be added here -->
-            </ul>
-            <div id="empty-state" class="empty-state">
-                <i class="fas fa-clipboard-check"></i>
-                <p>タスクはありません</p>
+            <!-- Templates Section -->
+            <section id="tab-templates" class="tab-content">
+                <div class="section-header">
+                    <h2>テンプレート管理</h2>
+                    <button id="btn-create-template" class="action-btn primary">
+                        <i class="fas fa-plus"></i> 新規作成
+                    </button>
+                </div>
+                <div id="templates-container" class="templates-grid">
+                    <!-- Templates will be inserted here -->
+                </div>
+            </section>
+
+            <!-- Archive Section -->
+            <section id="tab-archive" class="tab-content">
+                <div class="section-header">
+                    <h2>アーカイブ履歴</h2>
+                </div>
+                <div id="archive-container" class="groups-grid">
+                    <!-- Archives will be inserted here -->
+                </div>
+            </section>
+        </main>
+    </div>
+
+    <!-- Modal for Creating Template -->
+    <div id="template-modal" class="modal-overlay hidden">
+        <div class="modal-card">
+            <div class="modal-header">
+                <h3>新規テンプレート作成</h3>
+                <button class="close-modal"><i class="fas fa-times"></i></button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>テンプレート名</label>
+                    <input type="text" id="tpl-title-input" placeholder="例: 朝のルーティン" autocomplete="off">
+                </div>
+                <div class="form-group">
+                    <label>タスクリスト</label>
+                    <div id="tpl-items-list" class="tpl-items-list">
+                        <!-- Dynamic inputs -->
+                    </div>
+                    <div class="tpl-input-row">
+                        <input type="text" id="tpl-new-item-input" placeholder="タスクを追加..." autocomplete="off">
+                        <button id="btn-add-tpl-item" class="icon-btn"><i class="fas fa-plus"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn secondary close-modal">キャンセル</button>
+                <button id="btn-save-template" class="btn primary">保存</button>
             </div>
         </div>
-        
-        <div class="stats">
-            <span>残り: <span id="items-left">0</span></span>
+    </div>
+
+    <!-- Feedback Overlay (Auto Archive) -->
+    <div id="feedback-overlay" class="feedback-overlay hidden">
+        <div class="feedback-content">
+            <i class="fas fa-check-circle shine"></i>
+            <h2>All Done!</h2>
+            <p>アーカイブに移動します...</p>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
