--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                     <input type="text" id="tpl-title-input" placeholder="例: 朝のルーティン" autocomplete="off">
                 </div>
                 <div class="form-group">
-                    <label>タスクリスト</label>
-                    <div id="tpl-items-list" class="tpl-items-list">
-                        <!-- Dynamic inputs -->
+                    <label>内容</label>
+                    <div id="tpl-sections-container" class="tpl-sections-container">
+                        <!-- Dynamic sections -->
                     </div>
-                    <div class="tpl-input-row">
-                        <input type="text" id="tpl-new-item-input" placeholder="タスクを追加..." autocomplete="off">
-                        <button id="btn-add-tpl-item" class="icon-btn"><i class="fas fa-plus"></i></button>
-                    </div>
+                    <button id="btn-add-section" class="action-btn small secondary"
+                        style="margin-top: 10px; width: 100%;">
+                        <i class="fas fa-folder-plus"></i> グループ(大タスク)を追加
+                    </button>
                 </div>
             </div>
             <div class="modal-footer">
